--- a/Collab.css
+++ b/Collab.css
@@ -1,3 +1,26 @@
-body{
+body {
     
+}
+h1 {
+font-family: ;
+font-size: ;
+color:;     
+}
+p {
+font-family: ;
+font-size: ;
+color: ;
+}
+ul {
+margin: 0;
+padding: 0;
+list-style-type: none;
+}
+li {
+    display: inline;
+    padding: 8px;
+}
+
+li:hover {
+    color: lightblue;
 }
